# ask-panda-toolkit

./: README.md  askpanda_llm_env_example.sh  bamboo_env.sh  pyproject.toml
askpanda_interfaces/: README.md
askpanda_mcp/: config.py  core.py  server.py
askpanda_mcp/data/: queuedata.json
askpanda_mcp/entrypoints/: http.py
askpanda_mcp/llm/: base.py  config_loader.py  exceptions.py  factory.py  llm_passthrough.py  runtime.py  types.py
askpanda_mcp/llm/providers/: mistral_client.py
askpanda_mcp/prompts/: templates.py
askpanda_mcp/tools/: __init__.py  askpanda_answer.py  base.py  doc_rag.py  health.py  llm_passthrough.py  log_analysis.py  pilot_monitor.py  queue_info.py  task_status.py
core/: pyproject.toml
core/bamboo/: __init__.py  __main__.py  cli.py  config.py  core.py  server.py
core/bamboo/entrypoints/: http.py
core/bamboo/llm/: __init__.py  base.py  config_loader.py  factory.py  manager.py  registry.py  runtime.py  selector.py
core/bamboo/llm/providers/: anthropic_client.py  gemini_client.py  mistral_client.py  openai_client.py  openai_compat_client.py
core/bamboo/prompts/: templates.py
core/bamboo/tools/: bamboo_answer.py  base.py  doc_rag.py  health.py  llm_passthrough.py  loader.py  log_analysis.py  queue_info.py  task_status.py  task_status_atlas.py
docs/: mcp.md  mcp_sequence_diagram.mmd
interfaces/: README.md
interfaces/shared/: mcp_client.py
interfaces/streamlit/: chat.py
tests/: conftest.py  test_planner.py
